Update 51 and 52 now populated

--- a/index.html
+++ b/index.html
@@ -633,41 +633,175 @@
 </ul>
 
 <h2>Update 52</h2>
-<p>Release Date:</p>
+<p>Release Date: December 9th, 2021</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Free Quest Itemization</li>
+<li>New Reaper Affix System</li>
+<li>New Snowpeaks Challenge: The Climb!</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>Diversion from Ninja Spy now adds its five Sneak Attack dice without requiring you to be using a Quarterstaff.</li>
+<li>The Crown of Summer from the Druid's Season' Herald tree is now: "You have a +15 Enhancement bonus to Positive Healing Amplification, a +15 Enhancement bonus to Melee Power, and a +10 Enhancement bonus to Ranged Power."</li>
+<li>The Crown of Summer item enchantment is now: "You have a +15 Enhancement Bonus to Positive Healing Amplification, a +10 Enhancement Bonus to Melee Power, and a +5 Enhancement bonus to Ranged Power."</li>
+<li>Several new augments are now available in-game: Healing Amplification, Repair Amplification, Negative Amplification, Melee Power, Ranged Power.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Earning a Reaper Action Point now briefly displays visuals on your character.</li>
+<li>Enervation and Rend the Soul no longer apply through Deathward.</li>
+<li>Enervation now takes Metamagic feats properly.</li>
+<li>Sleeping in Brawnpits' bed no longer spams a voice line repeatedly.</li>
+<li>Undead and Necromancers in the Forgotten Realms will no longer congratulate you on finding Ahraatz-ri's Treasure Hoard.</li>
+<li>The Gianthold Augment traders now have their correct descriptions.</li>
+<li>The voice lines in Let Sleeping Dust Lie are now correct.</li>
+<li>Several weapon effects now apply their proper visuals.</li>
+<li>The Armor of Celebration is now Bound to Account.</li>
+<li>Planar Shards are now Bound to Account.</li>
+<li>Eternal Flasks, Coffees, and other non-potion "Potions" can now be used while moving.</li>
+<li>Teleport Items (such as the Bottle of Mist from the Ravenloft Expansion Pack) are now Bound to Account.</li>
+<li>Upgrade Tomes of Fate are now able to be turned into Purified Eberron Dragonshards.</li>
+<li>Lightning Storm Runearms now display fewer light particles.</li>
+<li>You no longer need to unequip and re-equip Minor Artifacts and Sentient weapons when you log in to get their bonuses.</li>
+<li>Fixed an issue where the Temperance of Spirit benefit was being erroneously removed upon death.</li>
+<li>Pierce Adamantine and Pierce Cold Iron acquired from items now function.</li>
+<li>The Eternal Wand of Cure Minor Wounds is now Bound to Account.</li>
+<li>The Epic, Legendary, and Perfected Bloodstone now have their correct icons.</li>
+<li>Draconic Incarnation's Bring About Destruction now applies its 10 Universal Spell Power.</li>
+<li>Abilities in Exalted Angel now allow you to move while using them.</li>
+<li>Exalted Angel’s Leap of Faith now recharge if you are not a Favored Soul.</li>
+<li>Fury of the Wild's Unbridled Fury now allows you to be moving while it activates.</li>
+<li>Shadowdancer's Depths of Darkness now stacks as intended.</li>
+<li>Leap of Faith's Feather Fall duration is now 15 seconds.</li>
+<li style="color:Blue;">Fixed an issue where Displacement was not always working correctly.</li>
+<li style="color:Blue;">An Epic Destiny alert has been removed from characters under level 20.</li>
+<li style="color:Blue;">Artificers are no longer prevented from mounting horses.</li>
+<li style="color:Blue;">Paladin auras have been reworked behind the scenes for game performance and to be quieter.</li>
+<li style="color:Blue;">The Half-Elven Greater Mark of the Storm's text description has had its damage values corrected to reflect Call Lightning Storm's current power.</li>
+<li style="color:Blue;">Traditionalist Caster in Tiefling Scoundrel no longer resets your enhancement trees when you log in.</li>
+<li style="color:Blue;">Bombardier's Caster Level bonuses in its cores now stack more reliably.</li>
+<li style="color:Blue;">Feydark Illusionist's Illusory Augmentation is no longer lost on death.</li>
+<li style="color:Blue;">Swashbuckler's Fast Movement is no longer lost on death.</li>
+<li style="color:Blue;">Nature's Warrior's Go For the Kill no longer costs double its Spell Point cost.</li>
+<li style="color:Blue;">Enduring Beast in Nature's Protector no longer has the wrong minimum level.</li>
+<li style="color:Blue;">Divine Intervention in Warpriest and Warsoul now works while moving.</li>
+<li style="color:Blue;">Divine Crusader's Blessed Blades no longer appears in the buff bar.</li>
+<li style="color:Blue;">Draconic Incarnation's Dragon Breath's epic strike now has a tooltip explaining its DC.</li>
+<li style="color:Blue;">Bring About Destruction now gives its proper Spell Power.</li>
+<li style="color:Blue;">Draconic Spell Focus: Conjuration now properly applies its Conjuration bonuses.</li>
+<li style="color:Blue;">Grandmaster of Flowers' The Flow of Water no longer increases damage taken by 1500%.</li>
+<li style="color:Blue;">Shadowdancer's Impale now functions more reliably with repeating crossbows.</li>
+<li style="color:Blue;">Shiradi Champion's Watchful Eye now functions correctly.</li>
+<li style="color:Blue;">Watchful Eye's tooltip has been updated to make it clear that the ability needs Spot to function properly.</li>
+<li style="color:Blue;">Several category feats no longer display erroneous missing class levels as a prerequisite.</li>
+<li style="color:Blue;">Combat Archery now properly provides +1[W].</li>
+<li style="color:Blue;">Fount of Life has a more accurate tooltip.</li>
+<li style="color:Blue;">Finesse effects on named and crafted loot now functions more reliably.</li>
+<li style="color:Blue;">Potions of Greater Heroism now apply their Fear Immunity correctly.</li>
+<li style="color:Blue;">Several effects meant to add more than one Spell Power now correctly apply their intended Spell Powers.</li>
+<li style="color:Blue;">Typos in certain enhancement bonuses have been corrected so they now properly scale to +15.</li>
+<li style="color:Blue;">The Runearm from Sinister Secret of Saltmarsh now has an Epic and Legendary version.</li>
+<li style="color:Blue;">Reaper bonuses now properly function on Runearms.</li>
+<li style="color:Blue;">Iconic Reincarnation now properly wipes your Monster Manual progress.</li>
+<li style="color:Blue;">Celestial Bombardment is now less blinding.</li>
+<li style="color:Blue;">Storm of Vengeance now applies its Lightning damage properly.</li>
+<li style="color:Blue;">Guild Rewards beyond level 150 now mention the color change of your guild name plate as part of their rewards.</li>
+<li style="color:Blue;">The tooltip on weapons now shows its correct Proficiency Penalty.</li>
+<li style="color:Blue;">The Details (plus) Tab now shows both Blast and Pact dice, and now correctly tracks your bonus Hit Point Percentage.</li>
+<li style="color:Blue;">Hirelings and Artificer/Druid pets now benefit from Epic Summoning bonuses again.</li>
+<li style="color:Blue;">The Combat Log no longer mentions Dodge when you cast a spell that has to bypass Spell Penetration.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
-<li>-</li>
+<li>While a character is dead and warded from being raised their health bar icon in the party window will now display a teal skull. Once the raise ward wears off, the skull will return to its normal red visual.</li>
+<li>You can now swap a Minor Artifact with another Minor Artifact in the same item slot without needing to unequip one item then equip the other separately.</li>
+<li>Augments can now be slotted while inside dungeons.</li>
+<li>The Comment Field in a Public LFM entry is now saved between the automatic Public LFM listing and delisting.</li>
+<li>Resetting a group of enhancement trees (Reaper, Enhancements, Destinies) no longer increases the cost of resetting other groups of enhancement trees.</li>
+<li>Your character's percentage bonus for Maximum Hit Points is now available to view in the + tab of the Character Sheet.</li>
+<li>The Bravery Bonus for the Quest Difficulty UI now displays bonuses more than four digits long.</li>
+<li>Universal Enhancement Trees are no longer slotted as active trees by default. You may find them in the dropdown menus of your Enhancement Windows.</li>
+<li>There is a new UI option checkbox to hide all buffs on your character that have Infinite Duration.</li>
+<li>The dice UI now displays Spell Resistance Failure! all on one line instead of being cut off.</li>
+<li style="color:Blue;">The dice UI is back to being more appropriately justified against the icon.</li>
+<li style="color:Blue;">The Quest Entrance UI now has slightly more room for quest names to avoid truncation, and the ? tooltip area near the Dungeons Completed section has been nudged to be a little more out of the way.</li>
+<li style="color:Blue;">You may now hold your Block key (Default: Left Shift) while falling with Feather Fall to drop as if you did not have Feather Fall.</li>
+<li style="color:Blue;">You may now dismount from your mount while in mid-air (Default: Left Shift).</li>
 </ul>
 
 <h2>Update 51</h2>
-<p>Release Date:</p>
+<p>Release Date: November 3rd, 2021</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Epic Destiny Overhaul<ul>
+<li>Epic Destiny: Shadowdancer</li>
+<li>Epic Destiny: Grandmaster of Flowers</li>
+<li>Epic Destiny: Divine Crusader</li>
+<li>Epic Destiny: Exalted Angel</li>
+<li>Epic Destiny: Draconic Incarnation</li>
+<li>Epic and Destiny Feat Rework</li></ul></li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>The Enervation spell now applies a Negative Damage Over Time effect.</li>
+<li>The following spells are now in spell books:<ul>
+<li>Artificer<ul>
+<li>Arcane Tempest - Level 6</li></ul></li>
+<li>Cleric/Favored Soul<ul>
+<li>Celestial Bombardment - Level 9</li>
+<li>Divine Wrath - Level 9</li></ul></li>
+<li>Druid<ul>
+<li>Insidious Spores - Level 7</li>
+<li>Stormrage - Level 8</li>
+<li>Tsunami - Level 9</li></ul></li>
+<li>Sorcerer/Wizard<ul>
+<li>Arcane Tempest - Level 8</li></ul></li></ul>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Aasimar Ascendant Bonds no longer spam your combat log.</li>
+<li>Several Falconry bird attacks now properly factor in their Assassinate bonuses.</li>
+<li>Pale Master's Improved Zombie Form now properly penalizes your attack speed.</li>
+<li>Archer's Focus no longer spams your combat log.</li>
+<li>You may now trade Tomes of Fate for Purified Eberron Dragonshards.</li>
+<li>The values of Assassinate DC bonuses found on items has increased significantly.</li>
+<li>Legacy Augment Unslotters are now Bound to Account.</li>
+<li>Cannith Crafted Keen no longer sometimes stops working.</li>
+<li>Dragonborn can now properly use the Druid Cold Breath spell.</li>
+<li>Prismatic Strike’s weapon damage reduction debuff now does the correct value of 25%.</li>
+<li>The Gnome and Deep Gnome tree Cores 2 and 4 now have their correct icons.</li>
+<li style="color:Blue;">A variety of Epic Destiny abilities no longer stop working after death.</li>
+<li style="color:Blue;">New Epic Destinies no longer force reset the Feydark Illusionist enhancement tree when you log in.</li>
+<li style="color:Blue;">Divine Crusader's Epic Moment now has its proper cooldown.</li>
+<li style="color:Blue;">The Attune the Arcane Destiny Mantle now properly procs on Cold spells.</li>
+<li style="color:Blue;">Drifting Lotus and Lotus Bloom now have their proper DC calculation.</li>
+<li style="color:Blue;">Several abilities are no longer erroneously visible in your buff bar.</li>
+<li style="color:Blue;">The Shadowdancer Epic Moment has had its tooltip corrected.</li>
+<li style="color:Blue;">The Legendary and Perfected Helm of the Red Dragon now have their proper appearance.</li>
+<li style="color:Blue;">Destiny Tomes now have improved wording to reflect their usage in the new Epic Destiny system.</li>
+<li style="color:Blue;">The second and third Draconic Incarnation cores are now properly hidden in the buff bar.</li>
+<li style="color:Blue;">Drifting Lotus now has its original range and area of effect placement, and now properly respects stunning immunities.</li>
+<li style="color:Blue;">Serenity now has its correct tooltip.</li>
+<li style="color:Blue;">Corrected an issue with the cooldown for Weird.</li>
+<li style="color:Blue;">Weird is now properly a Fear based spell, and benefits from Fear DC boosts.</li>
+<li style="color:Blue;">Weird is no longer automatically prepared for Artificers.</li>
+<li style="color:Blue;">Shadowdancer's Core 3 now properly boosts Alchemist's evasion feat.</li>
+<li style="color:Blue;">Feats that claim to modify Poison, Negative, and Positive Spell Critical Damage now correctly do so.</li>
+<li style="color:Blue;">Several items from the Epic Sands loot set now have their correct Augment Slots.</li>
+<li style="color:Blue;">Arcane Tempest is no longer automatically prepared in Artificer spellbooks.</li>
+<li style="color:Blue;">Holy Aura now applies to the caster.</li>
+<li style="color:Blue;">Divine Wrath no longer attempts to remove Endless Ardor stacks.</li>
+<li style="color:Blue;">The first Core of Grandmaster of Flowers now properly gives handwraps proficiency.</li>
+<li style="color:Blue;">Scion of Earth and Epic Spell Power: Poison now give their proper amount of Poison Spell Critical Damage.</li>
+<li style="color:Blue;">Several typos have been corrected.</li>
+<li style="color:Blue;">The names of the Perfected artifacts from the Sands of Menectarun adventure pack have been corrected.</li>
+<li style="color:Blue;">The + tab now properly shows Light Resistance.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
-<li>-</li>
+<li>Toggles now remember their state better through logout and login.</li>
+<li>There is a new tab on the Character Sheet that contains your Epic Destiny abilities.</li>
 </ul>
 
 <h2>Update 50</h2>
