update 50 and 49 added

--- a/index.html
+++ b/index.html
@@ -805,37 +805,181 @@
 </ul>
 
 <h2>Update 50</h2>
-<p>Release Date:</p>
+<p>Release Date: August 4th, 2021</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Sinister Secret of Saltmarsh Itemization</li>
+<li>Itemization Stat Squish</li>
+<li>Seal/Scroll/Shard Crafting Overhaul</li>
+<li>Legendary Crafting</li>
+<li style="color:Blue;">Public Grouping Update<ul>
+<li style="color:Blue;">The system now automatically sets the level range to correspond with the level of the content you are running:</li>
+<li style="color:Blue;">In Heroic levels, the upper level boundary is now the instance level, and the lower boundary is the instance level minus three. So, a level 6 quest on elite (which is instance level 8) will always be open to levels 5-8, regardless of the level of the players in the group. This has an upper limit of 19.</li>
+<li style="color:Blue;">In Epic levels, the lower level boundary is now 20 regardless of the quest CR. The upper level boundary is the instance level +2, due to Epic levels having an expanded Bravery Bonus range. So, a level 25 quest on Elite will now always be 20-29. This has an upper limit of 30.</li>
+</ul></li>
+<li style="color:Blue;">Night Revels Update<ul>
+<li style="color:Blue;">New Champions, new rewards! No longer need to run the graveyard instance!</li></ul></li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>Underwater combat has been adjusted for playability, and no longer adjusts what spells are able to be cast, penalize your movement or attack rates as severely, and instead makes fire spells deal 80% damage and electric spells deal 120% while underwater.</li>
+<li>Druids now get Protection from Elements, Mass as a level 7 spell.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Poison Damage Resistance now properly reduces Poison Damage.</li>
+<li>Eldritch Knight's Item Defense (both versions) now give the listed amount of Item Defense.</li>
+<li>Falconry: Meticulous Weaponry now anti-requisites with other forms of Item Defense.</li>
+<li>Paladin: Knight of the Chalice: The Tier 3 ranged attack was sharing its name with a Tier 5 ability (both called "Avenging Shot"); it has had its name fixed to be "Exalted Shot", matching its melee counterpart.</li>
+<li>The Aura of Courage buff from the Knight of the Chalice capstone now reliably applies to all party members</li>
+<li>Rogue: Thief Acrobat: Sweeping Strikes now correctly factors in your Trip DC.</li>
+<li>Henshin Mystic's SLAs now correctly factor in Stunning bonuses.</li>
+<li>Inquisitive's Crossbow Style no longer claims it has a 2/3rds Doubleshot reduction instead of its actual 1/2 Doubleshot reduction.</li>
+<li>Inquisitive's passive Dodge from Hit The Streets now functions properly.</li>
+<li>Eldritch Rituals no longer sometimes place buggy visual effects onto your character in certain situations.</li>
+<li>Nature Protector's third Core no longer erroneously grants the spell Great Maul, and it is now correctly granted in the 4th Core ability.</li>
+<li>Patron Reward feats should now consistently remain on you through Lesser and Epic Reincarnations.</li>
+<li>Burst of Glacial Wrath now works on everything, rather than erroneously excluding certain monsters.</li>
+<li>Permanent Gold Seal Hirelings, such as the Onyx Panther, Saltmarsh Bullywug Rogue, and Owlbear Defender are now Bound to Account.</li>
+<li>Trap the Soul now requires a standalone special component called a Khyber Dragonshard that is found in shops wherever high quality spell components may be found. This component works for all variations of Trap the Soul.</li>
+<li>Brilliant Crescent (main hand) now works with Swashbuckling.</li>
+<li>The Flamecleansed Fury set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Hruit's Influence set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Arcsteel Battlemage set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Arcsteel Battlemage set now properly gives +1 Intelligence as listed (was +2).</li>
+<li>The Feywild Dreamer set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Legendary Flamecleansed Fury set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Legendary Hruit's Influence set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Legendary Arcsteel Battlemage set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>The Legendary Arcsteel Battlemage set now properly gives +3 Intelligence as listed (was +4).</li>
+<li>The Legendary Feywild Dreamer set's Spell Crit Chance is now properly Artifact-typed.</li>
+<li>Removed some NPC's from Meridia that were not meant to be there.</li>
+<li>Evard's Black Tentacles has had its tooltip fixed.</li>
+<li>The Alchemist spell Smoke Bomb's Invisibility no longer remains after you begin attacking.</li>
+<li>Icons for certain drow damage over time poisons have been set to actually look like poison.</li>
+<li style="color:Blue;">String tables have been corrected on Epic Transmutation items for the Sands of Menechtarun Adventure Pack.</li>
+<li style="color:Blue;">Corrected an issue that could cause characters to be unable to summon a Mount.</li>
+<li style="color:Blue;">Some items that erroneously missed the cap level item power normalization have been adjusted.</li>
+<li style="color:Blue;">Ingredients used in upgrading Scroll/Seal/Shard items now describe in their tooltip which crafting device they are used in.</li>
+<li style="color:Blue;">Upgrading Heroic Scroll/Seal/Shard items now properly requires Greater Tokens of the Twelve.</li>
+<li style="color:Blue;">Some items have had miscellaneous small issues corrected.</li>
+<li style="color:Blue;">Commendations of Heroism can now be turned in for Greater Tokens of the Twelve on a one to one (1:1) basis by speaking to Lahar in The Twelve.</li>
+<li style="color:Blue;">Epic chests throughout Saltmarsh now have a small chance of also dropping 1,000 Sentient XP gems.</li>
+<li style="color:Blue;">Corrected an issue that prevented players with an old Epic version of the Web of Chaos items from cleansing them at the Legacy Altar of Epic Rituals.</li>
+<li style="color:Blue;">Contained augments now display their minimum level.</li>
+<li style="color:Blue;">Favored Weapons are once more properly recognized on log in without needing to unequip and re-equip them.</li>
+<li style="color:Blue;">Saltmarsh mount types no longer improperly display as "unicorn".</li>
+<li style="color:Blue;">Several small fixes have been made to various Epic and Legendary Crafting loot.</li>
+<li style="color:Blue;">Adept Combatant now properly adds Warhammer and Heavy Mace as Favored Weapons.</li>
+<li style="color:Blue;">Holy Combatant now properly adds Greatsword as a Favored Weapon.</li>
+<li style="color:Blue;">Paladin's Tier 5 Divine Revelation now provides its missing 1 Spell Resistance, and no longer provides additional unintended bonuses.</li>
+<li style="color:Blue;">Several small item bugs have been fixed.</li>
+<li style="color:Blue;">Several typos in the Epic and Legendary item crafting system have been corrected.</li>
+<li style="color:Blue;">After acquiring a feat, enhancement, or destiny ability that grants a new Favored Weapon, you no longer need to unequip and then re-equip your main hand weapon for it to be properly recognized as a Favored Weapon.</li>
+<li style="color:Blue;">Players can now trade 250 Threads of Fate for a Soul Vessel. Open the Threads of Fate barter window by double-clicking on Threads of Fate in your inventory.</li>
+<li style="color:Blue;">Saltmarsh throwing weapons now fly correctly.</li>
+<li style="color:Blue;">Vulkoorim Fighting Leathers can now be properly upgraded.</li>
+<li style="color:Blue;">The Lizardfolk Sentient Jewel now displays properly in your weapon tooltip.</li>
+<li style="color:Blue;">Several changes have been made to specific Alchemist spells in order to alleviate performance pressure on the game client.</li>
+<li style="color:Blue;">Ascendancy in Knight of the Chalice now properly gives the +2 to Attack and Damage with all weapons it says it does.</li>
+<li style="color:Blue;">Radiant Servant's Cure Moderate Wounds can now be cast on undead players.</li>
+<li style="color:Blue;">Offhand Versatility no longer erroneously drops on death.</li>
+<li style="color:Blue;">Legendary items now drop from Legendary level quests in Sinister Secret of Saltmarsh instead of their upgradable Heroic equivalents.</li>
+<li style="color:Blue;">Legendary Greensteel Augments now display their descriptions when slotted.</li>
+<li style="color:Blue;">The binding status has been corrected for several items within the Sands of Menechtarun.</li>
+<li style="color:Blue;">Sovereign Lightning Strike on accessories now functions correctly.</li>
+<li style="color:Blue;">Several set bonuses from the Red Fens now function correctly.</li>
+<li style="color:Blue;">Random loot and Cannith Crafted weapons now have their correct (W) scaling.</li>
+<li style="color:Blue;">Cleansing rituals now properly work on Web of Chaos items.</li>
+<li style="color:Blue;">Reaper Mode's Resurrection Ward will no longer be erroneously reapplied in certain situations after a player snaps back to their soul stone.</li>
+<li style="color:Blue;">Several spell like abilities in the Favored Soul and Eldritch Knight enhancement trees now properly enforce their global cooldown.</li>
+<li style="color:Blue;">Vistani Knife Fighter's Deadly Blades no longer sticks around for longer than it should.</li>
+<li style="color:Blue;">Feather Fall augments and items no longer toggle off Warlock's Celestial Spirit</li>
+<li style="color:Blue;">Sovereign Lightning Strike now works consistently.</li>
+<li style="color:Blue;">Random and Cannith Crafted loot now have their correct W score.</li>
+<li style="color:Blue;">A variety of Heroic Red Fens items now have their correct stats and set bonuses.</li>
+<li style="color:Blue;">The Truthful Bow set now provides its correct amount of Fortification bypass.</li>
+<li style="color:Blue;">The Mantle of Suulomades set now provides its correct amount of Doublestrike.</li>
+<li style="color:Blue;">A variety of weapons now have their correct material typing in the durability window.</li>
+<li style="color:Blue;">Epic Flameward can now be restored at the Legacy Altar of Epic Rituals.</li>
+<li style="color:Blue;">Several additional options for the Gem of Many Facets have been added.</li>
+<li style="color:Blue;">Typos have been corrected in some Diversion effects.</li>
+<li style="color:Blue;">Several scaling alignment-based burst effects now properly change the base alignment of the weapon they are on.</li>
+<li style="color:Blue;">Mind and Matter set bonuses now provide their listed Magical Resistance Rating cap.</li>
+<li style="color:Blue;">Deathward now properly protects you from everything that Deathblock does.</li>
+<li style="color:Blue;">Threads of Fate have had their visuals updated.</li>
+<li style="color:Blue;">New copies of the Precision Lenses from White Plume Mountain now have their correct version of Manslayer.</li>
+<li style="color:Blue;">Dripping with Magma now applies on ranged attacks and harmful spellcasts.</li>
+<li style="color:Blue;">Void, the Endless Cold is now dealing Cold damage again.</li>
+<li style="color:Blue;">A variety of tooltip errors have been fixed with Set Bonuses</li>
+<li style="color:Blue;">The Crocodile Maw Handwraps now properly take sentience</li>
+<li style="color:Blue;">Creeping Doom and Enveloping Swarm are now internally typed as Acid spells.</li>
+<li style="color:Blue;">Dragonborn can now properly use the Druid Cold Breath spell.</li>
+<li style="color:Blue;">Potions can now be used while moving.</li>
+<li style="color:Blue;">Typos have been corrected in the Altars of Epic and Legendary Rituals.</li>
+<li style="color:Blue;">Crafting Storage no longer cuts off the maximum capacity if you have a lot of it.</li>
+<li style="color:Blue;">Pressing Loot All in a chest will now also loot bound but unpassable ingredients such as Threads of Fate and Raid Runes without requiring you to loot them on their own individually.</li>
+<li style="color:Blue;">Items in your inventory are no longer affected by random durability loss from the combat flow.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
-<li>-</li>
+<li>Formatting for the percentage hit points for your party members has been adjusted slightly to better take advantage of available space.</li>
+<li>Weapons that do non-mundane damage such as Flameblades or Celestia now correctly interact with DR and resistances.</li>
 </ul>
 
 <h2>Update 49</h2>
-<p>Release Date:</p>
+<p>Release Date: April 21st, 2021</p>
 <h3>Main Features:</h3>
 <ul>
-<li>-</li>
+<li>Doublestrike and Doubleshot Overhaul</li>
+<li>Perils of the Planar Eyes Itemization</li>
+<li>Fusible and Malleable Itemization Update</li>
 </ul>
 <h3>Balance:</h3>
 <ul>
-<li>-</li>
+<li>Feytwisted Raid Items are now able to be acquired by spending Raid Runes.</li>
 </ul>
 <h3>Bugfixes:</h3>
 <ul>
-<li>-</li>
+<li>Cleric SLAs and actives can now be used while moving.</li>
+<li>Spellsinger - Maestro of Life and Death now provides its listed spell crit chance.</li>
+<li>Vistani Knife Fighter: Rapid Strike and Rapid Throw now have their Doublestrike bonus properly typed as Morale.</li>
+<li>Celestial Tutelage in Aasimar now works as a prerequisite for the Feydark Illusionist enhancement tree.</li>
+<li>Fatesinger's Greater Shout has had its tooltip corrected.</li>
+<li>Uncanny Dodge feats no longer causes a pause in auto attack.</li>
+<li>Offhand Versatility now functions with Orbs.</li>
+<li>Glamered versions of Titania's Crown now show butterflies.</li>
+<li>Insightful and quality Resistance Items now provide the correct amount of bonuses.</li>
+<li>Eversight now functions as intended.</li>
+<li>The Changestone's raid rune turn-in now mentions that it is randomly rolled.</li>
+<li>Shieldbreaker now provides its proper Sunder bonus.</li>
+<li>You can now break the root walls in Combatting Corruption with ranged attacks.</li>
+<li>An error message now displays when a player attempts to summon a mount in a quest.</li>
+<li>Bard's Hold Monster, Mass now uses its correct spell components.</li>
+<li>Word of Balance's tooltip has been corrected.</li>
+<li>Chaos Hammer, Unholy Blight, and Order's Wrath now do their correct damage against all alignments.</li>
+<li>Unconsciousness Range bonuses now appear in the + stats tab of your Character Sheet.</li>
+<li style="color:Blue;">The Aegis of Aosu'riel now has flavor text.</li>
+<li style="color:Blue;">Aasimar Scourge's Greater Scourge Weapons no longer says it grants offhand Doublestrike, is now hidden from the buff bar, and no longer falls off when you enter a dungeon, die, or rest.</li>
+<li style="color:Blue;">Vivace, the Rapier of Rhapsody now applies it spell critical damage more reliably.</li>
+<li style="color:Blue;">Several new items released in Update 49 now have their correct material type.</li>
+<li style="color:Blue;">The Snakeskin Vest, Gorgon Docent, and Gorgon Armor are now back to being minimum level 8.</li>
+<li style="color:Blue;">Corrected an issue that was preventing Bladeforged Iconics from getting their level 15 gear on the Hardcore server.</li>
+<li style="color:Blue;">The Sunblade no longer improperly places a buff onto your buff bar.</li>
+<li style="color:Blue;">The Magical Vulnerability from Bound Fate and the Physical Vulnerability from Grim Fate no longer stack when effects from different ranks are applied.</li>
+<li style="color:Blue;">Rank 2 and 3 of Bound Fate now applies Magical Vulnerability for the correct duration of 45 seconds.</li>
+<li style="color:Blue;">Rank 3 of Bound Fate now properly applies its listed amount of 12% Magical Vulnerability.</li>
+<li style="color:Blue;">Grim Fate now properly applies its listed amount of Physical Vulnerability (6/10/12%).</li>
+<li style="color:Blue;">Corrected an issue with the icon for the new Hardcore IV mount.</li>
+<li style="color:Blue;">The Wizard version of Eldritch Knight's Eldritch Blade capstone now properly adds +2 Constitution</li>
+<li style="color:Blue;">Knight of the Chalice's Holy Retribution now restores Smite charges again.</li>
+<li style="color:Blue;">The Communion of Scribing in the Bladeforged Iconic enhancement tree no longer has its incorrect tooltip speed numbers.</li>
+<li style="color:Blue;">The Word of Balance SLA in Season's Herald has had its text corrected.</li>
+<li style="color:Blue;">The alert icon for a guild leveling up to a high level now uses the Legendary Victory icon.</li>
+<li style="color:Blue;">Ki Shout now properly uses your Concentration modifier instead of your Intimidate modifier.</li>
+<li style="color:Blue;">The Sora Kell set bonus now applies its correct effect.</li>
+<li style="color:Blue;">Melee Attack Speed and Ranged Attack Speed on the main page of the Character Sheet now properly include Feat-based bonuses to attack speed.</li>
+<li style="color:Blue;">Doublestrike, Doubleshot, Melee Attack Speed, Ranged Attack Speed, and Bypass Deflection on the main page of the Character Sheet no longer show decimal values to those stats.</li>
 </ul>
 <h3>Engineering:</h3>
 <ul>
